updated html to match changes in design ex: linked images to go with the hover feature and unlinked the titles

--- a/index.html
+++ b/index.html
@@ -2,56 +2,52 @@
 <html>
    <head>
       <title>Podcasts</title>
-      <link rel="'stylesheet" type="'text/css" href="'styles.css">
+      <link rel="stylesheet" type="text/css" href="styles.css">
    </head>
    <body>
-<h1>Lost in a Podcast</h1>
-<h2>My top three pod hyperfixations</h2>
-<p>Walking my dog, painting my living room, rowing at the gym, laying in my hammock, powering through chores, [insert other multitasking activity] you can bet I'm listening to on one of these podcasts. Which is your favorite? </p>
-<main>
-   <article>
-      <div>
-      <h3><a href="https://defector.com/normal-gossip-podcast"target="_blank" rel="noopener noreferrer">Normal Gossip</a></h3>
-      <h4>By: Defector</h4>
-      <p>"Normal Gossip delivers juicy, strange, funny and utterly banal gossip about people you'll never know and never meet."</p>
-      <img src="images/gossip.png" alt="Normal Gossip Podcast Cover" width="250" height="250">
-      <p>Favorite Episodes</p>
-      <ol>
-         <li>Vigilante Renovation</li>
-         <li>In Defense of Children</li>
-         <li>You Can't Fight with Heiress Tongue</li>
-      </ol>
-   </article>
-   <article>
-      <h3><a href="https://hubermanlab.com/category/podcast-episodes/"target="_blank" rel="noopener noreferrer">The Huberman Lab</a></h3>
-      <h4>By: Huberman Lab</h4>
-      <p>Neuroscientist and professor at Standford School of Medicine Andrew Huberman discusses brain development, function and neuroplasticity.</p>
-      <img src="images/huberman.png" alt="The Huberman Lab Podcast Cover" width="250" height="250">
-      <p>Favorite Episodes</p>
-      <ol>
-         <li>Sleep Toolkit: Tools for Optimizing Sleep & Sleep-Wake Timing</li>
-         <li>Using Play to Rewire & Improve Your Brain</li>
-         <li>Leveraging Dopamine</li>
-      </ol>
-   </article>
-   <article>
-      <h3><a href="https://kastmedia.com/podcasts/the-opportunist/" target="_blank" rel="noopener noreferrer">The Opportunist</a></h3> <!--add hyperlink-->
-      <h4>By: Kast Media</h4>
-      <p>"The Opportunist tells true stories of regular people who turn sinister simply by being opportunistic."</p>
-      <img src="images/opportunist.png" alt="The Opportunist Podcast Cover" width="250" height="250">
-      <p>Favorite Episodes</p>
-      <ol>
-         <li>David Ghantt: A Capital M</li>
-         <li>Sherry Shriner: Internet Prophet</li>
-         <li>Sheryl Ruthven: A New Mary Magdalene</li>
-      </ol>
-   </div>
-   </article>
-   <footer>
-      <p>updated July 2023</p>
-      <p>&copy 2023</p>
-   </footer>
-</main>
-
+      <article class="header">
+         <h1 class="main-heading">Lost in a Podcast</h1>
+            <h2 class="main-subtitle">My top three pod hyperfixations</h2>
+               <p id="testP" class="funParagraph">Walking my dog, painting my living room, rowing at the gym, laying in my hammock, powering through chores, [insert other multitasking activity] you can bet I'm listening to on one of these podcasts. Which is your favorite? </p>
+      </article>   
+            <article class="pod-section">
+               <div class="pod-1">
+                  <h3 class="pod-title">Normal Gossip | By: Defector</h3>
+                     <p class="pod-blurb">"Normal Gossip delivers juicy, strange, funny and utterly banal gossip about people you'll never know and never meet."</p>
+                        <a href="https://defector.com/normal-gossip-podcast"target="_blank" rel="noopener noreferrer"><img class="pod-cover" src="images/gossip.png" alt="Normal Gossip Podcast Cover" width="250" height="250"></a>
+                           <p class="pod-favorites-title">Favorite Episodes</p>
+                           <ol>
+                              <li>Vigilante Renovation</li>
+                              <li>In Defense of Children</li>
+                              <li>You Can't Fight with Heiress Tongue</li>
+                           </ol>
+               </div>
+               <div class="pod-2">
+                  <h3 class="pod-title">The Huberman Lab | By: Huberman Lab</h3>
+                        <p class="pod-blurb">Neuroscientist and professor at Standford School of Medicine Andrew Huberman discusses brain development, function and neuroplasticity.</p>
+                        <a href="https://hubermanlab.com/category/podcast-episodes/"target="_blank" rel="noopener noreferrer"><img class="pod-cover" src="images/huberman.png" alt="The Huberman Lab Podcast Cover" width="250" height="250"></a>
+                           <p class="pod-favorites-title">Favorite Episodes</p>
+                           <ol>
+                              <li>Sleep Toolkit: Tools for Optimizing Sleep & Sleep-Wake Timing</li>
+                              <li>Using Play to Rewire & Improve Your Brain</li>
+                              <li>Leveraging Dopamine</li>
+                           </ol>
+               </div>
+               <div class="pod-3">
+                  <h3 class="pod-title">The Opportunist | By: Kast Media</h3>
+                        <p class="pod-blurb">"The Opportunist tells true stories of regular people who turn sinister simply by being opportunistic."</p>
+                        <a href="https://kastmedia.com/podcasts/the-opportunist/" target="_blank" rel="noopener noreferrer"><img class="pod-cover" src="images/opportunist.png" alt="The Opportunist Podcast Cover" width="250" height="250"></a>
+                              <p class="pod-favorites-title">Favorite Episodes</p>
+                              <ol>
+                                 <li>David Ghantt: A Capital M</li>
+                                 <li>Sherry Shriner: Internet Prophet</li>
+                                 <li>Sheryl Ruthven: A New Mary Magdalene</li>
+                              </ol>
+               </div>
+            </article>
       </body>
+         <footer>
+            <p>updated July 2023</p>
+            <p>&copy 2023</p>
+         </footer>
 </html>
