fixed copyright and main heading id to camel case

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
       <article class="header">
          <header>
-            <h1 id="main-heading">Lost in a Podcast</h1>
+            <h1 id="mainHeading">Lost in a Podcast</h1>
          </header>
          <h2 id="main-subtitle">My top three pod hyperfixations</h2>
          <p id="testP" class="funParagraph">Walking my dog, painting my living room, rowing at the gym, laying in my
@@ -63,7 +63,7 @@
    </body>
 </main>
 <footer>
-   <p>updated July 2023 | &copy 2023</p>
+   <p>updated July 2023 | &copy; 2023</p>
 </footer>
 
 </html>
